--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1>Hello!</h1>
+<html>
+<head>
+<style>
+body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+</style>
+</head>
+<body>
+
+<h1>The Trebuchet Buffs</h1>
+<p>Website under construction...</p>
+
+</body>
+</html>
