Added new video of shoot seen from the back of the structure

--- a/index.html
+++ b/index.html
@@ -187,5 +187,12 @@ body {
 <h1>The Trebuchet Buffs</h1>
 <p>Website under construction...</p>
 
+
+<video width="400" controls>
+  <source src="Videos/Shoot_seen_from_back_of_structure.mp4" type="video/mp4">
+  <source src="mov_bbb.ogg" type="video/ogg">
+  Your browser does not support HTML video.
+</video>
+
 </body>
 </html>
