--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ body {
 
 
 	<div class="navbar">
-  <a href="#home">Home</a>
+  <a href="./index.html">Home</a>
   <a href="#simulation">Simulation</a>
   <div class="dropdown">
     <button class="dropbtn">Gallery 
@@ -162,9 +162,9 @@ body {
       </div>   
       <div class="row">
         <div class="column">
-          <h3>Category 1</h3>
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
+          <h3>Demonstration of 25 June 2023</h3>
+          <a href="#">Pictures</a>
+          <a href="./videos_25_June_2023.html">Videos</a>
           <a href="#">Link 3</a>
         </div>
         <div class="column">
@@ -186,13 +186,6 @@ body {
 
 <h1>The Trebuchet Buffs</h1>
 <p>Website under construction...</p>
-
-
-<video width="400" controls>
-  <source src="Videos/Shoot_seen_from_back_of_structure.mp4" type="video/mp4">
-  <source src="mov_bbb.ogg" type="video/ogg">
-  Your browser does not support HTML video.
-</video>
 
 </body>
 </html>
