--- a/videos_25_June_2023.html
+++ b/videos_25_June_2023.html
@@ -1,198 +1,27 @@
 <html>
-<head>
-<style>
-body {
-  background-color: 8FBC8F;
-}
+  <head>
+    <link rel='stylesheet' type='text/css' href='websiteStyle.css'>
+    <script src="components/header.js" type="text/javascript" defer></script>
+    <script src="components/footer.js" type="text/javascript" defer></script>
+  </head>
 
-h1 {
-	font-family: "Times New Roman", Times, serif;
-	font-size: 80px;
-	font-variant: small-caps;
-  color: white;
-  text-align: center;
-}
-
-p {
-  font-family: verdana;
-  font-size: 20px;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 160px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111;
-}
-
-
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-}
-
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  font-family: "Times New Roman", Times, serif;
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 160px;
-  text-decoration: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 160px;
-  background-color: inherit;
-  font: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: black;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  width: 100%;
-  left: 0;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content .header {
-  background: black;
-  padding: 16px;
-  color: white;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  background-color: #ccc;
-  height: 250px;
-}
-
-.column a {
-  float: none;
-  color: black;
-  padding: 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.column a:hover {
-  background-color: #ddd;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    height: auto;
-  }
-}
-
-</style>
-</head>
 <body>
+  <header-component></header-component>
 
+  <main>
 
-	<div class="navbar">
-  <a href="./index.html">Home</a>
-  <a href="#simulation">Simulation</a>
-  <div class="dropdown">
-    <button class="dropbtn">Gallery 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <div class="header">
-        <h2>Pictures and video gallery</h2>
-      </div>   
-      <div class="row">
-        <div class="column">
-          <h3>Demonstration of 25 June 2023</h3>
-          <a href="#">Pictures</a>
-          <a href="./videos_25_June_2023.html">Videos</a>
-          <a href="#">Link 3</a>
-        </div>
-        <div class="column">
-          <h3>Category 2</h3>
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-        <div class="column">
-          <h3>Category 3</h3>
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div>
-    </div>
-  </div> 
-</div>
+    <h2>Videos</h2>
 
-<h1>The Trebuchet Buffs</h1>
-<p>25 June 2023 Videos</p>
+    <center>
+      <p>25 June 2023</p>
+      <video width="400" controls>
+        <source src="Videos/Shoot_seen_from_back_of_structure_SlowMotion.mp4" type="video/mp4">
+        <source src="mov_bbb.ogg" type="video/ogg">
+        Your browser does not support HTML video.
+      </video>
+    </center>
+  </main>
 
-
-<video width="400" controls>
-  <source src="Videos/Shoot_seen_from_back_of_structure_SlowMotion.mp4" type="video/mp4">
-  <source src="mov_bbb.ogg" type="video/ogg">
-  Your browser does not support HTML video.
-</video>
-
+  <footer-component></footer-component>
 </body>
 </html>
