--- a/index.html
+++ b/index.html
@@ -9,47 +9,10 @@
 
   <header-component></header-component>
   <main>
-
-    <!-- <div class="navbar">
-      <a href="./index.html">Home</a>
-      <a href="#simulation">Simulation</a>
-      <a href="#gallery">Gallery</a>
-      <div class="dropdown">
-        <button class="dropbtn">Gallery 
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <div class="header">
-            <h2>Pictures and video gallery</h2>
-          </div>   
-          <div class="row">
-            <div class="column">
-              <h3>Demonstration of 25 June 2023</h3>
-              <a href="#">Pictures</a>
-              <a href="./videos_25_June_2023.html">Videos</a>
-              <a href="#">Link 3</a>
-            </div>
-            <div class="column">
-              <h3>Category 2</h3>
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
-            </div>
-            <div class="column">
-              <h3>Category 3</h3>
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
-            </div>
-          </div>
-        </div>
-      </div> 
-    </div> -->
-
     <h1>The Trebuchet Buffs</h1>
     <center>
       <p>Website under construction...</p>
-      <img src="./Images/Trebuchet_logo.png" alt="Logo">
+      <img src="./Images/Trebuchet_logo.png" alt="Logo" style="width:384px;height:384px;"style="width:128px;height:128px;">
     </center>
   </main>
   <footer-component></footer-component>
