Removed navbar config from .css as used in header.js component instead

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' type='text/css' href='websiteStyle.css'>
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
@@ -9,7 +10,7 @@
 
   <header-component></header-component>
   <main>
-    <h1>The Trebuchet Buffs</h1>
+    <h1 style="font-size:6vw;">The Trebuchet Buffs</h1>
     <center>
       <p>Website under construction...</p>
       <img src="./Images/Trebuchet_logo.png" alt="Logo" style="width:384px;height:384px;"style="width:128px;height:128px;">
