--- a/videos.html
+++ b/videos.html
@@ -16,12 +16,12 @@
       <p>25 June 2023</p>
 
       <div style="font-size:100;">
-        <video class="responsiveVideo" width="400" controls>
+        <video width="800" controls>
           <source src="Videos/Shot_seen_from_back_of_structure_SlowMotion.mp4" type="video/mp4">
           <source src="mov_bbb.ogg" type="video/ogg">
           Your browser does not support HTML video.
         </video>
-        <video class="responsiveVideo" width="400" controls>
+        <video width="800" controls>
           <source src="Videos/Long_Range_Shot_SlowMotion_Record.mp4" type="video/mp4">
           <source src="mov_bbb.ogg" type="video/ogg">
           Your browser does not support HTML video.
