--- a/videos.html
+++ b/videos.html
@@ -26,9 +26,22 @@
           <source src="mov_bbb.ogg" type="video/ogg">
           Your browser does not support HTML video.
         </video>
+        <video width="800" controls>
+          <source src="Videos/2023_06_25_Synchronised_Shot_and_Target_Hit_Correct_Cut.mp4" type="video/mp4">
+          <source src="mov_bbb.ogg" type="video/ogg">
+          Your browser does not support HTML video.
+        </video>
+        <video width="800" controls>
+          <source src="Videos/2023_06_25_Shot_seen_from_front_SlowMotion.mp4" type="video/mp4">
+          <source src="mov_bbb.ogg" type="video/ogg">
+          Your browser does not support HTML video.
+        </video>
       </div>
     </center>
   </main>
+
+  <br>
+  <br>
 
   <footer-component></footer-component>
 </body>
