Responsive video size and bottom margin

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <main>
     <h1 style="font-size:6vw;">The Trebuchet Buffs</h1>
     <center>
-      <p>Website under construction...</p>
-      <img src="./Images/Trebuchet_logo.png" alt="Logo" style="width:384px;height:384px;"style="width:128px;height:128px;">
+      <p style="font-size:calc(12px + 1.5vw);">Website under construction...</p>
+      <img src="./Images/Trebuchet_logo.png" alt="Logo" style="width:calc(110px + 15vw);height:calc(110px + 15vw);">
     </center>
   </main>
   <footer-component></footer-component>
