--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel='stylesheet' type='text/css' href='websiteStyle.css'>
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
+    <title>The Trebuchet Buffs</title>
   </head>
   
 <body>
