--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel='stylesheet' type='text/css' href='websiteStyle.css'>
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>The Trebuchet Buffs</title>
   </head>
   
